# aMAP_ROS2_AA10_Simulator

./: .gitignore  README.md  README_SETUP.md  frames_2025-08-31_11.15.17.gv  frames_2025-08-31_11.17.08.gv
install/: local_setup.sh  setup.sh
install/uni_car_ros2/share/uni_car_ros2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/uni_car_ros2/share/uni_car_ros2/cmake/: uni_car_ros2Config-version.cmake  uni_car_ros2Config.cmake
install/uni_car_ros2/share/uni_car_ros2/config/: display.rviz  ros2_controllers.yaml
install/uni_car_ros2/share/uni_car_ros2/environment/: ament_prefix_path.dsv  path.dsv
install/uni_car_ros2/share/uni_car_ros2/launch/: aa10_complete_stadium.launch.py  gazebo_simple.launch.py  gazebo_test.launch.py  rviz_display.launch.py  rviz_display.launch_origianl.py  rviz_simple.launch.py  simple_car_test.launch.py  simple_test.launch.py  teleop_keyboard.launch.py  uni_car_world.launch.py
install/uni_car_ros2/share/uni_car_ros2/maps/: map_house.pgm  map_house.yaml  map_track.pgm  map_track.yaml  map_world.pgm  map_world.yaml
install/uni_car_ros2/share/uni_car_ros2/meshes/: ROSCAR2_BASE.dae  ROSCAR2_LiDAR.dae  ROSCAR2_PiCameraV2.dae  ROSCAR2_Sonar.dae  ROSCAR2_WheelLeft.dae  (+1 more)
log/: latest_build
src/asw_robot_gazebo_sim/: package.xml  setup.cfg  setup.py
src/asw_robot_gazebo_sim/asw_robot/: wheel_control.py
src/asw_robot_gazebo_sim/launch/: display_robot_rviz2.launch.py  gazebo_rviz_display.launch.py
src/asw_robot_gazebo_sim/models/aa10_ground/: model.sdf
src/asw_robot_gazebo_sim/rviz/: asw_robot_gazebo.rviz
src/asw_robot_gazebo_sim/urdf/: asw_robot_base.xacro  asw_robot_gazebo_core.xacro  asw_robot_sim.xacro
src/asw_robot_gazebo_sim/worlds/: asw_robot_stadium_3x.world
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/uni_car_ros2/: CMakeLists.txt  README.md  package.xml
src/uni_car_ros2/cmake/: uni_car_ros2Config-version.cmake  uni_car_ros2Config.cmake
src/uni_car_ros2/config/: display.rviz  ros2_controllers.yaml
src/uni_car_ros2/environment/: ament_prefix_path.dsv  path.dsv
src/uni_car_ros2/launch/: aa10_complete_stadium.launch.py  aa10_stadium_with_robot.launch.py  gazebo_stadium_only.launch.py  robot_spawn_gazebo.launch.py  robot_spawn_simple.launch.py
src/uni_car_ros2/models/aa10_ground/: model.config
src/uni_car_ros2/models/aa10_ground/materials/scripts/: aa10_ground.material
src/uni_car_ros2/rviz/: uni_car_world.rviz
src/uni_car_ros2/scripts/: test_joint_publisher.py
src/uni_car_ros2/urdf/: materials.xacro  simple_robot.urdf  uni_car.urdf
src/uni_car_ros2/worlds/: aa10_complete_stadium.world  aa10_complete_stadium.world.backup  mando_track.world  mando_track1.world  minimal_test.world  test_ground.world
(+41 files in other folders)
